Added initial dom, listeners

--- a/src/template.html
+++ b/src/template.html
@@ -1,9 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
     </head>
-    <body></body>
+    <body>
+        <main>
+            <h3>Welcome to Weather APP :D</h3>
+            <form id="location-form">
+                <label for="location"> Location </label>
+                <input type="text" id="location" placeholder="Location" />
+                <button type="submit" id="submit-btn">Submit</button>
+            </form>
+            <div class="forcast"></div>
+        </main>
+    </body>
 </html>
