finished featching and show weather location

--- a/src/template.html
+++ b/src/template.html
@@ -13,7 +13,7 @@
                 <input type="text" id="location" placeholder="Location" />
                 <button type="submit" id="submit-btn">Submit</button>
             </form>
-            <div class="forcast"></div>
+            <div id="forcast"></div>
         </main>
     </body>
 </html>
